mockito decided to make my life hard, removed it for now since I didn't manage to fix